--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@microsoft/docusaurus-plugin-application-insights": "^4.0.1",
     "@popperjs/core": "^2.11.8",
     "react-markdown": "^9.0.1",
+    "rehype-raw": "^7.0.0",
     "scheduler": "^0.20.2",
     "search-insights": "^2.11.0"
   }
